frontend/test/should_fail/attrib_070.grg
using attrib_model_001;

rule r {
	ni : NINT;
	nb : NBOOL;
	nf : NFLOAT;
	nd : NDOUBLE;
	ns : NSTRING;
	-ei:EINT->;
	-eb:EBOOL->;
	-ef:EFLOAT->;
	-ed:EDOUBLE->;
	-es:ESTRING->;

	modify {
		eval {
			ni.a = 1;
			nb.a = true;
			nf.a = 1.0f;
			nd.a = 1.0;
			ns.a = "";

			ei.a = 2;
			eb.a = false;
			ef.a = 2.0f;
			ed.a = 2.0;
			es.a = "Hi!";

			nf.a = ns.a;
		}
	}
}

